Bug 418091 - [OS X] keyboard shortcuts with symbols not shown in menus [r=josh]