widget/cocoa/nsMenuItemX.h
@@ -90,6 +90,8 @@ public:
   nsresult      DispatchDOMEvent(const nsString &eventName, bool* preventDefaultCalled);
   void          SetupIcon();
 
+  static PRUint32   ConvertGeckoToMacKeyCode(nsAString& aKeyCodeName);
+
 protected:
   void UncheckRadioSiblings(nsIContent* inCheckedElement);
   void SetKeyEquiv();
